--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -3,8 +3,8 @@
 # Hugo Documentation: https://gohugo.io/getting-started/configuration/#all-configuration-settings
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
-title: 'My Notes' # Website name
-baseURL: 'https://example.com/' # Website URL
+title: 'OMFS Academy' # Website name
+baseURL: 'https://omfs.academy/' # Website URL
 
 ############################
 ## PAGE OPTIONS
